--- a/universal_robot_dynident/config/additional_info.yaml
+++ b/universal_robot_dynident/config/additional_info.yaml
@@ -10,45 +10,72 @@ cybersort:
   tool_link: "ur10_tool0"
   gravity: [0, 0, -9.806]
   
-  #joint_1:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial1"
-      #constants: [1.0e-6,5] # toll_approssimazione_segno, max_vel_for_extrapolation
-      #coefficients: [0, 0]  #attrito statico, attrito viscoso c1, 
 
-  #joint_2:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial2"
-      #coefficients: [0, 0, 0, 1.0e-6, 100] #attrito statico, attrito viscoso c1, attrito viscoso c2, toll_approssimazione_segno, max_vel_for_extrapolation
+  ur10_shoulder_pan_joint :
+
+    friction:
+      type: "Polynomial1"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-6
+      coefficients:
+        viscous: 0
+        coloumb: 0
+  ur10_shoulder_lift_joint:
+
+    friction:
+      type: "Polynomial2"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-10
+      coefficients:
+        first_order_viscous: 0
+        second_order_viscous: 0
+        coloumb: 50
+        
+  ur10_elbow_joint:
+
+    friction:
+      type: "Ideal"
+    friction:
+      type: "Polynomial2"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-1
+      coefficients:
+        first_order_viscous: 0
+        second_order_viscous: 1
+        coloumb: 50
+  ur10_wrist_1_joint:
+    friction:
+      type: "Polynomial1"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-10
+      coefficients:
+        viscous: 0
+        coloumb: 0
+        
+  ur10_wrist_2_joint:
+
+    friction:
+      type: "Polynomial1"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-10
+      coefficients:
+        viscous: 0
+        coloumb: 0
+        
+  ur10_wrist_3_joint:
+
+    friction:
+      type: "Polynomial1"
+      constants: 
+        max_velocity: 10
+        min_velocity: 1.0e-10
+      coefficients:
+        viscous: 0
+        coloumb: 0
+        
       
-  #joint_3:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial1"
-      #coefficients: [0, 5, 1.0e-6, 100]
-      
-  #joint_4:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial1"
-      #coefficients: [0, 5, 1.0e-6, 100]
-      
-  #joint_5:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial1"
-      #coefficients: [0, 5, 1.0e-6, 100]
-      
-  #joint_6:
-    #motor:
-      #type: "Ideal"
-    #friction:
-      #type: "Polynomial1"
-      #coefficients: [0, 5, 1.0e-6, 100]
