--- a/universal_robot_dynident/config/binary_logger.yaml
+++ b/universal_robot_dynident/config/binary_logger.yaml
@@ -2,17 +2,9 @@ start_log: true
 
 binary_logger:
   num_worker_threads: 10
-  # test_path: is the path where the binary file will be saved (if empty the destination directory will be '/home/user/.ros' )
+  # test_path: is the path where the binary file will be saved.
+  # NOTE: for RosDyn, leave empty the destination directory will be '/home/user/.ros')
   test_path: ""
-  
-  # test_name: is the name of the test. The final file name will be [test_name]_[topic_type]_[topic_name].bin
-  # NOTE '/' will be substitute with '_'
-  test_name: "test_movement"
-#  test_name: "velocity_standard"
-#  test_name: "proto5_motor_ident_M4_jnt1_trial_1_acc_vel_ratio_2"
-#  test_name: "proto5_load_ident_M6_trial_1"
-#  test_name: "proto5_spring1_ident"
-
   
   # manager_name: name of the nodlet manager (need to be equal to the name in the launch file)
   manager_name: 'binary_logger'
@@ -29,9 +21,9 @@ binary_logger:
   JointState:
     # List of the topic to be acquired 
     topic_names:
-      - '/ur10/joint_states'  # feedback motor/link
+      - '/ur10_35/joint_states'  # feedback motor/link
       
-    # Acquisition time (to be specified for each topic)
+    # Max acquisition time (to be specified for each topic)
     duration:
       - 400 #[s]
   
