--- a/universal_robot_dynident/config/meto_general_config.yaml
+++ b/universal_robot_dynident/config/meto_general_config.yaml
@@ -1,26 +1,61 @@
-group_name: "ur10"
-rescale: false
-meto_cfg:
-  acceleration_scaling: 1.0
-  speed_scaling: 1.0
-  verbose: true
-  urdf_param: "robot_description"
-  urdf_name: "cybersort"
-  trajectory_namespace: "ident_trj"
-  controller_joint_names: 
-  - ur10_shoulder_pan_joint
-  - ur10_shoulder_lift_joint
-  - ur10_elbow_joint
-  - ur10_wrist_1_joint
-  - ur10_wrist_2_joint
-  - ur10_wrist_3_joint
+# Name of the move group
+group_name: "ur10_35"
 
-    
+# recompute IterativeSplineParameterization before executing trajectory
+rescale: false
+
+# Model Estimation and Trajectory Optimization parameters
+meto_cfg:
+
+  # maximum allowed acceleration scaling (should be in range ]0,1])
+  acceleration_scaling: 1.0
+  # maximum allowed velocity scaling (should be in range ]0,1])
+  speed_scaling: 1.0
+
+  # print verbose messages
+  verbose: true
+
+  # name of the URDF file. If not specified, it will be set equal to "robot_description"
+  urdf_param: "robot_description"
+
+  # default value of the identification trajectory
+  trajectory_namespace: "ident_trj"
+
+  # list of controlled joint names
+  controller_joint_names: 
+  - ur10_35_shoulder_pan_joint
+  - ur10_35_shoulder_lift_joint
+  - ur10_35_elbow_joint
+  - ur10_35_wrist_1_joint
+  - ur10_35_wrist_2_joint
+  - ur10_35_wrist_3_joint
+
+
+  # stage 1
+  # trajectory that explore the entire workspace.
+  # It should be longer than 30 seconds
+
+  # stage 2:
+  # trajectories that perform small movements inside a region to identify friction and grativational part.
   opt_cfg:
-    stage1_duration: 10
+    # duration of stage 1
+    stage1_duration: 30
+
+    # number of region of the stage2
     region_stage2: 0
+    # number of point inside a region
     point_per_region: 5
+
+    # number of trial to find the trajectory
     trials: 3
+
+  # filter of the acquired data.
+  # Position, Velocity, and Effort are low-pass filtered (1st order)
+  # Acceleration is obtained by using a high-pass filtered (1st order)
+
   filter:
-    frequency: 50
+    frequency: 50 # [Hz]
     sample_period: 0.008
+
+  # parameters that are not need. check if they can be deleted
+  # urdf_name: "cybersort"
